@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 2;
+use Test::More;
 
 BEGIN { $ENV{TESTAPP_ENCODING} = 'UTF-8' };
 
@@ -10,9 +10,14 @@ BEGIN { $ENV{TESTAPP_ENCODING} = 'UTF-8' };
 use FindBin qw($Bin);
 use lib "$Bin/lib";
 
-# make sure testapp works
 BEGIN {
-use_ok('TestApp') };
+if ( !eval { require Test::WWW::Mechanize::Catalyst } ) {
+    plan skip_all => 'Need Test::WWW::Mechanize::Catalyst for this test';
+}
+}
+
+# make sure testapp works
+use_ok('TestApp');
 
 use Test::WWW::Mechanize::Catalyst 'TestApp';
 my $mech = Test::WWW::Mechanize::Catalyst->new;
@@ -21,4 +26,6 @@ my $mech = Test::WWW::Mechanize::Catalyst->new;
     TestApp->encoding('UTF-8');
     $mech->get_ok('http://localhost/unicode', 'encoding configured ok');
 }
+
+done_testing;
 
